github link added

--- a/help.html
+++ b/help.html
@@ -20,7 +20,7 @@
             <h2>📞 Contact Options</h2>
             <div class="options">
                 <a href="mailto:yourmail@gmail.com" class="btn">📧 Email Support</a>
-                <a href="https://github.com/YOUR_GITHUB" class="btn">💻 GitHub Issues</a>
+                <a href="https://github.com/Jeet-c3" class="btn">💻 GitHub Issues</a>
                 <a href="#" class="btn">🐞 Report a Bug</a>
             </div>
         </div>
@@ -51,7 +51,7 @@
         </div>
 
         <footer>
-            © 2025 | Help & Support — Tony Stark
+            © 2025 | Help & Support — Jeet Sarkar
         </footer>
     </div>
 
