--- a/About.html
+++ b/About.html
@@ -148,7 +148,7 @@
 
         <div class="contact">
           <!-- Replace HREF values with real links -->
-          <a class="gh" href="https://github.com/YOUR_GITHUB" target="_blank" rel="noreferrer">
+          <a class="gh" href="https://github.com/Jeet-c3" target="_blank" rel="noreferrer">
             <!-- simple GitHub svg could be replaced by an image file -->
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="filter: drop-shadow(0 2px 6px rgba(0,0,0,0.6))"><path fill="#fff" d="M12 .5C5.7.5.6 5.6.6 11.9c0 5 3.3 9.2 7.9 10.7.6.1.8-.3.8-.6v-2.2c-3.2.7-3.9-1.4-3.9-1.4-.6-1.5-1.5-1.9-1.5-1.9-1.2-.8.1-.8.1-.8 1.3.1 2 1.3 2 1.3 1.2 2 3.2 1.4 4 .9.1-.7.5-1.4.9-1.7-2.6-.3-5.3-1.3-5.3-5.9 0-1.3.5-2.3 1.3-3.1-.1-.3-.6-1.7.1-3.6 0 0 1-.3 3.3 1.2a11.3 11.3 0 0 1 6 0C18 3 19 3.3 19 3.3c.7 1.9.2 3.3.1 3.6.8.8 1.3 1.9 1.3 3.1 0 4.6-2.8 5.6-5.4 5.9.5.4.9 1.2.9 2.5v3.6c0 .3.2.7.8.6 4.6-1.5 7.9-5.7 7.9-10.7C23.4 5.6 18.3.5 12 .5z"></path></svg>
             <span style="font-size:14px;color:var(--muted)">GitHub</span>
